# parallax

./: .gitignore  AGENTS.md  README.md  debug_norgate.py  main.py  pyproject.toml  requirements.txt  run_parallax.bat  setup.bat  stop_parallax.bat  test_btc_variants.py
data/: settings.json
data/csv/: TEST.csv
src/: app.py  main.py
src/core/: stats.py
src/data/: factory.py  loader.py  yahoo_loader.py
src/ui/: dashboard.py  layout.py
src/utils/: async_tools.py  settings.py
tests/: test_env.py  test_loader.py  test_stats.py
