[project]
name = "parallax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flet>=0.80.4",
    "flet-desktop>=0.80.4",
    "numpy>=2.4.1",
    "plotly>=6.5.2",
    "polars>=1.37.1",
    "pytest>=9.0.2",
    "scipy>=1.17.0",
]
