[project]
name = "parallax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "solara>=1.31.0",
    "numpy>=2.4.1",
    "plotly>=6.5.2",
    "polars>=1.37.1",
    "scipy>=1.17.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
